# aione-monihub

./: .env  .gitignore  Cargo.toml  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTANCE_ID_MIGRATION.md  PROJECT_COMPLETION_REPORT.md  README.md  Rust_服务器_DuckDB_到_PostgreSQL_数据库迁移.md  Rust_服务器_DuckDB_到_PostgreSQL_数据库迁移（使用_SeaORM）.md  check_instances.sh  package-lock.json  package.json  temp_func.rs  test_task_routes.sh  后台用户管理页面开发.md
.codebuddy/: analysis-summary.json  pdc.json
.figma/1_2/: index.jsx  index.module.scss
.kiro/steering/: chinese-language.md
.qoder/quests/: add-instance-log-ui.md  api-health-check.md  api-health-check.sh  api-performance-report.json  api-performance-results.txt  api-performance-test.sh  backend-api-validation.md  backend-database-migration.md  check-and-complete-backend-todos.md  header-user-credential-middleware.md  instance-report-and-control.md  project-structure-setup.md  run-api-tests.sh  server-api-creation.md  server-module-splitting.md  service-directory-checking.md
.qoder/rules/: default.md
.trae/documents/: Java Agent 文件下载与服务端断点续传上传改造方案.md  Java Agent 日志上报与内存限流实现方案.md  Windows 脚本执行方式优化与回退方案.md  database_migration_to_duckdb.md  duckdb_technical_architecture.md  project_management_prd.md  “执行结果”页改造为 Tabs，并新增“文件夹”列表与下载.md  (+24 more)
apps/agent/rust/: Cargo.toml  build.rs  config.yaml  run.sh
apps/agent/rust/.run/: Run monihub-agent-rs.run.xml  Test monihub-agent-rs.run.xml
apps/agent/rust/src/: agent_logger.rs  config.rs  executor.rs  log_store.rs  main.rs  models.rs  utils.rs
apps/agent/rust/src/handlers/: custom_command.rs  file_manager.rs  http_request.rs  mod.rs  run_code.rs  shell_exec.rs
apps/agent/rust/src/services/: mod.rs  report.rs  tasks.rs
apps/agent/rust/src/utils/: http_util.rs
apps/server/: .env  .env.development  .env.example  Cargo.toml  README.md  SNOWFLAKE_ID_GUIDE.md  test_data_cleanup.sh
apps/server/.run/: Run aione-monihub-server.run.xml  Test aione-monihub-server.run.xml
apps/server/api/: main.rs
apps/server/api/src/: auth.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  websocket.rs
apps/server/db/: monihub.db
apps/server/migrations/: 001_initial_schema.sql  002_add_agent_instance_id.sql  002_extend_instances_table.sql  002_password_reset_tokens.sql  003_chinese_menu_permissions.sql  003_instance_report_and_control.sql  004_add_is_hidden_to_permissions.sql  004_add_offline_at.sql  005_add_user_management_permissions.sql  005_fix_last_report_at_index.sql  006_add_online_status.sql  006_normalize_status_fields.sql  007_add_agent_config.sql  007_fix_permissions_action_enum.sql  007_normalize_instances_network_type.sql  008_add_application_id_to_instance_tasks.sql  009_add_pending_task_status.sql  010_create_files_table.sql  011_add_file_task_instance_fields.sql  012_rename_agent_config_to_config.sql  013_add_log_type_to_logs.sql  014_add_tech_stacks_to_applications.sql  015_configs_generate_values_and_config_values.sql
apps/server/scripts/: export_duckdb.py  init_db.sh  migrate.sh
apps/server/src/: lib.rs  main.rs  migrator.rs
apps/server/src/applications/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/audit/: diff.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
apps/server/src/configs/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs  tests.rs  value_sync.rs
apps/server/src/deployments/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/entities/: applications.rs  config_values.rs  configs.rs  configurations.rs  deployments.rs  files.rs  instance_records.rs  instance_task_records.rs  instance_tasks.rs  instances.rs  logs.rs  machines.rs  mod.rs  password_reset_tokens.rs  permissions.rs  projects.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs
apps/server/src/files/: handlers.rs  models.rs  routes.rs
apps/server/src/health/: handlers.rs  mod.rs  routes.rs
apps/server/src/instance_reports/: handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/instance_tasks/: handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/instances/: handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/logs/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  tests.rs
apps/server/src/machines/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/maintenance/: data_cleaner.rs  mod.rs  offline_checker.rs  scheduler.rs
apps/server/src/permissions/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/projects/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/roles/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/shared/: database.rs  enums.rs  error.rs  mod.rs  request.rs  request_context.rs  snowflake.rs  snowflake_examples.rs  status.rs
apps/server/src/users/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
apps/server/src/websocket/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs
docker/: README.md
docs/: README.md  authentication-flow.md  frontend-auth-guide.md
(+347 files in other folders)
