[package]
name = "aione-monihub-server"
version = "0.1.0"
edition = "2021"
default-run = "aione-monihub-server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aione-monihub-server"
path = "src/main.rs"

[[bin]]
name = "run_migrations"
path = "src/bin/run_migrations.rs"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = "0.99"
log = "0.4"
env_logger = "0.10"
actix-web-actors = "4.0"
actix = "0.13"
utoipa = { version = "4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
dotenv = "0.15"