[package]
name = "aione-monihub-server"
version = "0.1.0"
edition = "2021"
default-run = "aione-monihub-server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aione-monihub-server"
path = "src/main.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[[bin]]
name = "snowflake_demo"
path = "src/bin/snowflake_demo.rs"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "0.12.15"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99"
log = "0.4"
env_logger = "0.10"
actix-web-actors = "4.2"
actix = "0.13"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
dotenv = "0.15"
futures-util = "0.3"
bcrypt = "0.15"
# Snowflake ID generator dependencies
once_cell = "1.19"
rand = "0.8"